force-app/main/default/objects/Outreach_GoRules_Settings__mdt/Outreach_GoRules_Settings__mdt.object-meta.xml
<CustomObject>
    <description>RulesEngine Agent evaluate settings for Patient Outreach. Author in BRMS; Salesforce calls evaluate only.</description>
    <label>Outreach RulesEngine Setting</label>
    <pluralLabel>Outreach RulesEngine Settings</pluralLabel>
</CustomObject>