force-app/main/default/objects/Outreach_GoRules_Settings__mdt/fields/Project_Slug__c.field-meta.xml
<CustomField>
    <fullName>Project_Slug__c</fullName>
    <label>Project Slug</label>
    <length>80</length>
    <type>Text</type>
</CustomField>