force-app/main/default/objects/Outreach_GoRules_Settings__mdt/fields/Reaction_Decision_Key__c.field-meta.xml
<CustomField>
    <fullName>Reaction_Decision_Key__c</fullName>
    <label>Reaction Decision Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>