force-app/main/default/objects/Outreach_GoRules_Settings__mdt/fields/Surface_Decision_Key__c.field-meta.xml
<CustomField>
    <fullName>Surface_Decision_Key__c</fullName>
    <label>Surface Decision Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>